force-app/main/default/objects/MUSW__Fee__c/fields/abd_ABD_Amount__c.field-meta.xml
<CustomField>
    <fullName>abd_ABD_Amount__c</fullName>
    <label>ABD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>