force-app/main/default/objects/MUSW__Fee__c/fields/abd_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>abd_Account_Code__c</fullName>
    <label>Account Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>