force-app/main/default/objects/MUSW__Fee__c/fields/abd_Local_Authority_Amount__c.field-meta.xml
<CustomField>
    <fullName>abd_Local_Authority_Amount__c</fullName>
    <label>Local Authority Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>