force-app/main/default/objects/MUSW__Fee__c/fields/BGBK__Cart_Cashier__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Cart_Cashier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart Cashier</label>
    <referenceTo>BGBK__Cart__c</referenceTo>
    <relationshipLabel>Fees (Cart Cashier)</relationshipLabel>
    <relationshipName>CashierFees</relationshipName>
    <type>Lookup</type>
</CustomField>