force-app/main/default/objects/MUSW__Fee__c/fields/BGBK__Cart_Exclude__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Cart_Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Cart</label>
    <type>Checkbox</type>
</CustomField>