force-app/main/default/objects/MUSW__Fee__c/fields/BGBK__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>