force-app/main/default/objects/MUSW__Fee__c/fields/BGBK__Invoice__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>BGBK__Bill__c</referenceTo>
    <relationshipLabel>Invoiced Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>