force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Amended_Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amended_Amount__c</fullName>
    <label>Amended Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>