force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Amount__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount__c</fullName>
    <inlineHelpText>Leave blank for default value (set after Save)</inlineHelpText>
    <label>Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>