force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount Paid</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>