force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Amount_Waived__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Amount_Waived__c</fullName>
    <label>Waived Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>