force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>