force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fee_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid in Full</label>
    <type>Checkbox</type>
</CustomField>