force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Fee_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fee_Paid_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Paid By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fees Paid</relationshipLabel>
    <relationshipName>Fees_Paid</relationshipName>
    <type>Lookup</type>
</CustomField>