force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Fee_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Fee_Paid_Date__c</fullName>
    <label>Fee Paid Date/Time</label>
    <type>DateTime</type>
</CustomField>