force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Group__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>