force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Paid_By__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Paid_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fees Paid</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>