force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Payment_Comment__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Payment_Comment__c</fullName>
    <label>Payment Comments</label>
    <type>TextArea</type>
</CustomField>