force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Quantity__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>For simple fees that multiply a certain amount by the indicated quantity. eg. 35$ per inspection. Default is 1(flat fee).</description>
    <inlineHelpText>For fees per hours, lots, inspections, etc.</inlineHelpText>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>