force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Rank__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Rank__c</fullName>
    <defaultValue>999</defaultValue>
    <label>Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>