force-app/main/default/objects/MUSW__Fee__c/fields/MUSW__Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Receipt_Number__c</fullName>
    <label>Receipt Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>