force-app/main/default/objects/MUSW__Fee__c/validationRules/MUSW__Fee_Amount_Paid_Over_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Fee_Amount_Paid_Over_Amount</fullName>
    <active>true</active>
    <description>Can overpay an fee amount</description>
    <errorConditionFormula>MUSW__Amount_Paid__c > MUSW__Amount__c - NULLVALUE(MUSW__Amount_Waived__c, 0) - NULLVALUE(MUSW__Amended_Amount__c, 0)</errorConditionFormula>
    <errorMessage>Cannot overpay Fee Amount</errorMessage>
</ValidationRule>